Fix: header height preventing sidebars from collapsing

--- a/app/assets/stylesheets/shared/_navigation.scss
+++ b/app/assets/stylesheets/shared/_navigation.scss
@@ -262,6 +262,6 @@ header {
 
   @media (max-width: 991px) {
     overflow: auto;
-    height: 100vh;
+    height: fit-content;
   }
 }
